# hackathon-2021

./: .gitignore  .pre-commit-config.yaml  README.md  requirements.txt  setup.cfg  start.sh
app/handlers/: decomposition_handler.py  fuzzy_logic_handler.py  t_shirt_handler.py
app/models/: __init__.py  epic.py  issue.py
app/routes/: __init__.py  api.py
app/services/: jira.py
