[metadata]
name = hackathon-2021
version = 0.0.1
author = people of the forest
author_email = here@there.com
description = A small project to solve all your problems.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bdrolet/hackathon-2021

[options]
packages = find:
python_requires = >=3.8

